# SiQ_VL

./: .gitignore  .gitmodules  MEMORY_ANALYSIS.md  QUICK_FIX_OOM.md  README.md  main.py  pyproject.toml
scripts/: calculate_memory.py  generation.py  publish_to_hub.py  train.py  train.sh  train_launch.sh  train_stage_1.sh  train_stage_2.sh
siq_vl/: __init__.py  callbacks.py  collator.py  config.py  dataset.py  model.py  processing.py
siq_vl/model/: configuration.py  modeling.py  processing.py
